Fix for z-index bug on body in IE 11

--- a/Accordion-with-HTML-CSS-&-jQuery/demo.css
+++ b/Accordion-with-HTML-CSS-&-jQuery/demo.css
@@ -3,7 +3,6 @@
 \*------------------------------------*/
 body {
 	position:relative;
-	z-index:-2;
 }
 .main:before {
 	width:100%;
